<resources>

    <string name="app_name">Display Bus</string>
    <string name="title_activity_display">Transport Display</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">selvarajmca18@gmail.com</string>
    <string name="firebase_password" translatable="false">Selvaraj</string>
    <string name="get_route">Get Route</string>
    <string name="et_enter_email">Enter Email..</string>
    <string name="et_enter_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="ok">OK</string>
    <string name="about_us">About us</string>
    <string name="logout">LogOut</string>
    <string name="notification_text">Alert</string>
    <string name="directionsApiKey">AIzaSyDNfSO8JIxCU1aW4Gd4Wawav7AcQS-mQFs</string>
    <string name="sign_up"><u><i>Sign up?</i></u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="view_details"><u>View</u></string>

    <string-array name="timings">
        <item>Morning</item>
        <item>Evening</item>
    </string-array>
</resources>
